# ros1_gremsy

./: .gitignore  .gitman.yml  .gitmodules  CMakeLists.txt  README.md  nodelets.xml  package.xml
cfg/: ROSGremsy.cfg
config/: config.yaml
include/gremsy_base/: ros1_gremsy.h  ros_gremsy.h
launch/: gimbal.launch  gremsy_nodelet.launch
msg/: GimbalDiagnostics.msg
src/: gSDK  ros1_gremsy.cpp  ros1_gremsy_nodelet.cpp  ros_gremsy.cpp  ros_gremsy_nodelet.cpp
srv/: SetGimbalAttitude.srv
