<?xml version="1.0"?>
<package format="2">
  <name>ros1_gremsy</name>
  <version>0.0.1</version>
  <description>The core of the ros1_gremsy package</description>

  <maintainer email="7vahl@informatik.uni-hamurg.de">Florian Vahl</maintainer>

  <author email="7vahl@informatik.uni-hamurg.de">Florian Vahl</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
   <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>

